lecture_112_StyleComponent: 3rd party package to style components

--- a/src/index.css
+++ b/src/index.css
@@ -37,10 +37,10 @@ button:focus {
 }
 
 .controls {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  margin-bottom: 1.5rem;
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*gap: 0.5rem;*/
+  /*margin-bottom: 1.5rem;*/
 }
 
 .controls label {
